src/objects/Connectivity_System__c.object
<CustomObject>
    <fields>
        <fullName>Booking_Conf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Booking Conf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connectivity_Knowledge_Base__c</fullName>
        <label>Connectivity Knowledge Base</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Connectivity_System_Type__c</fullName>
        <label>Connectivity System Type</label>
        <picklist>
            <picklistValues>
                <fullName>CRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Allocator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Connectivity_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connectivity Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connectivity Systems</relationshipLabel>
        <relationshipName>Connectivity_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EQC2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is currently sourced from a spreadsheet, and cannot be included in the integration.</description>
        <inlineHelpText>This field is not included in any integration.</inlineHelpText>
        <label>EQC2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EQC_Development_Progress__c</fullName>
        <label>EQC Development Progress</label>
        <picklist>
            <picklistValues>
                <fullName>Connected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected by 3rd party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viewed Specifications</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EQC_Go_Date__c</fullName>
        <label>EQC Go Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EQC_Preferred_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EQC Preferred Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expedia_Connect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expedia Connect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expedia_Quick_Connect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expedia Quick Connect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expedia_Virtual_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expedia Virtual Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Connectivity_System_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Connectivity System ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Interface__c</fullName>
        <inlineHelpText>This field is not included in any integration.</inlineHelpText>
        <label>Interface</label>
        <picklist>
            <picklistValues>
                <fullName>AR Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR &amp; BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LAR_Supported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LAR Supported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Models__c</fullName>
        <label>Pricing Models</label>
        <picklist>
            <picklistValues>
                <fullName>OBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>System_ID__c</fullName>
        <label>System ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VC_Development_Progress__c</fullName>
        <label>VC Development Progress</label>
        <picklist>
            <picklistValues>
                <fullName>Connected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected by Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viewed Specs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VC_Go_Date__c</fullName>
        <label>VC Go Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Venere_Connect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Venere Connect</label>
        <type>Checkbox</type>
    </fields>
    <label>Connectivity System</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Connectivity_Vendor__c</columns>
        <columns>System_ID__c</columns>
        <columns>Connectivity_System_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Connectivity System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connectivity Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>